# state-channel-framework

./: .dockerignore  .gitignore  .tool-versions  Cargo.toml  README.md  Scarb.toml  snfoundry.toml
applier/: 1-declare.sh  4-get-agreement-by-id.sh  Scarb.toml  snfoundry.toml
applier/src/: applier.cairo  lib.cairo
cairo0/: aggregate.cairo  input.cairo  input.json  main.cairo
contracts/: Scarb.toml
contracts/src/: agreement.cairo  agreement_factory.cairo  facts_registry.cairo  udc.cairo
contracts/src/agreement_version_2/: snfoundry.toml
contracts/tests/: test_agreement.cairo  utils.cairo
crates/podman/src/: runner.rs
crates/utils/: Cargo.toml
crates/utils/src/: args.rs  client.rs  declare.rs  deploy.rs  lib.rs  models.rs  receipt.rs  server.rs  sncast.rs
dockerfiles/: prover.dockerfile
docs/: state-channel-framework-milestone-1.tex
provable/: Scarb.toml  input.json
provable/src/: agreement.cairo  lib.cairo  utils.cairo
scripts/: 1-declare.sh  2-deploy.sh  3-apply.sh  4-get-agreement-by-id.sh  compile.sh  hash.sh  herodotus.sh  prove.py  run.sh  server.py  unpack.py
scripts/cairo0/: compile.sh  hash.sh  main.sh  merge.sh  prove.sh  run.sh
scripts/demo/: 1-declare.sh  2-deploy.sh
scripts/erc20/: declare.sh  deploy.sh
src/: agreement.cairo  lib.cairo
src/agreement_version_2/: 1-declare.sh  2-deploy.sh  3-apply.sh  4-get-agreement-by-id.sh  Scarb.toml  snfoundry.toml
src/agreement_version_2/src/: agreement_version_2.cairo  lib.cairo
src/agreement_version_2/tests/: test_contract.cairo
tests/: lib.cairo  test_agreement.cairo  test_contract.cairo  utils.cairo
verifier/: Scarb.toml
verifier/src/: lib.cairo
verifier_applier/: Scarb.toml  agreement.cairo  herodotus.cairo
verifier_applier/src/: agreement_factory.cairo  lib.cairo  verifier_applier.cairo
verifier_contract/: agreement_factory.cairo  erc20.cairo  lib.cairo  verifier_applier.cairo
