[workspace]
resolver = "2"
members = [
    "bin/applier_runner",
    "bin/client",
    "bin/json_generator",
    "bin/server",
    "bin/verifier_applier_runner",
    "crates/podman",
    "crates/utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "macros", "multipart", "ws"] }
bytes = "1.4.0"
cairo-proof-parser = { git = "https://github.com/cartridge-gg/cairo-proof-parser", branch = "feat/proper-field-element-type" }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"] }
cookie_store = "0.21.0"
curve25519-dalek = "4.1.2"
dialoguer = "0.11.0"
ecdsa = { version = "0.16.9", features = ["arithmetic"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
elliptic-curve = "0.13.8"
futures = "0.3.30"
hex = "0.4.3"
http = "1.1.0"
http-body-util = "0.1.1"
hyper-util = "0.1.3"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
num-bigint = "0.4.5"
once_cell = "1.19.0"
podman = { path = "crates/podman" }
prefix-hex = "0.7.1"
primeorder = "0.13.6"
proptest = "1.4.0"
prover-sdk = { git = "https://github.com/neotheprogramist/http-prover", version = "0.1.0" }
rand = "0.8.5"
rand_core = "0.6.4"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
reqwest_cookie_store = "0.8.0"
secp256k1 = { version = "0.29.0", features = ["rand", "hashes", "rand-std"] }
seq-macro = "0.3.5"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_with = "3.8.1"
server = { path = "bin/server" }
sha2 = "0.10.8"
sha256 = "1.5.0"
stark-curve = "0.1.1"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "d980869" }
starknet_providers = { git = "https://github.com/xJonathanLEI/starknet-rs", package = "starknet-providers" }
starknet-crypto = "0.7.0"
surrealdb = { version = "1.5.3", features = ["kv-mem"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "timeout",
    "trace",
    "decompression-br",
    "set-header",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.1"
utils = { path = "crates/utils" }
uuid = "1.8.0"
