[package]
name = "utils"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet.workspace = true
tokio.workspace = true
axum.workspace = true
clap.workspace = true
podman.workspace = true
thiserror.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
prefix-hex.workspace = true
starknet-crypto.workspace = true
